added the button prompt

--- a/homepage.html
+++ b/homepage.html
@@ -7,10 +7,10 @@
     <title>Randy_Stith-Portfolio</title>
     <link href="style.css" rel="stylesheet">
 </head>
-<body style="background-color: black;">
+<body>
     
 
-<p id="btnprompt">Press Any Button To Start</p>
+
 
 
 </div>
