--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Randy_Stith-Portfolio</title>
     <link href="style.css" rel="stylesheet">
 </head>
-<body style="background-color: black;">
-    
+<body>
+    <div id="thing">
 
 <p id="btnprompt">Press Any Button To Start</p>
 
